fix filter on mobile

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -10,9 +10,12 @@
   border: 1px solid var(--blue);
   border-radius: 50px;
   padding: 0rem 1rem;
+  display: flex;
+  align-items: center;
 }
 .filter h4 {
   margin: 0.5rem;
+  text-align: center;
 }
 .filterOn {
   background-color: var(--blue);
@@ -22,6 +25,17 @@
 }
 .filterOff {
   background-color: var(--white);
+}
+/* mobile */
+@media (max-width: 820px){
+  .filter {
+    gap: 0.3rem;
+    margin: 2rem 1.5rem 0;
+  }
+  .filter div{
+    border-radius: 50px;
+    padding: 0rem 0rem;
+  }
 }
 .worksContainer {
   margin: 1rem auto 2rem;
